// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailVestigingActiviteitenItem should render exactly five activities 1`] = `
<div
  className="map-detail-result__item"
>
  <section
    className="map-detail-result__item-content"
  >
    <div
      className="map-detail-result__item-label"
    >
      SBI-code en -omschrijving
    </div>
    <ul
      className="map-detail-result__item-value map-detail-result__item-list"
    >
      <li
        className="map-detail-result__item-list-item"
        key="01"
      >
        01: SBI Description 1
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="02"
      >
        02: SBI Description 2
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="03"
      >
        03: SBI Description 3
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="04"
      >
        04: SBI Description 4
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="05"
      >
        05: SBI Description 5
      </li>
    </ul>
  </section>
</div>
`;

exports[`MapDetailVestigingActiviteitenItem should render no activities 1`] = `""`;

exports[`MapDetailVestigingActiviteitenItem should render no more than five activities 1`] = `
<div
  className="map-detail-result__item"
>
  <section
    className="map-detail-result__item-content"
  >
    <div
      className="map-detail-result__item-label"
    >
      SBI-code en -omschrijving
    </div>
    <ul
      className="map-detail-result__item-value map-detail-result__item-list"
    >
      <li
        className="map-detail-result__item-list-item"
        key="01"
      >
        01: SBI Description 1
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="02"
      >
        02: SBI Description 2
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="03"
      >
        03: SBI Description 3
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="04"
      >
        04: SBI Description 4
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="05"
      >
        05: SBI Description 5
      </li>
    </ul>
  </section>
</div>
`;

exports[`MapDetailVestigingActiviteitenItem should render one activity 1`] = `
<div
  className="map-detail-result__item"
>
  <section
    className="map-detail-result__item-content"
  >
    <div
      className="map-detail-result__item-label"
    >
      SBI-code en -omschrijving
    </div>
    <ul
      className="map-detail-result__item-value map-detail-result__item-list"
    >
      <li
        className="map-detail-result__item-list-item"
        key="01"
      >
        01: SBI Description 1
      </li>
    </ul>
  </section>
</div>
`;

exports[`MapDetailVestigingActiviteitenItem should render two activities 1`] = `
<div
  className="map-detail-result__item"
>
  <section
    className="map-detail-result__item-content"
  >
    <div
      className="map-detail-result__item-label"
    >
      SBI-code en -omschrijving
    </div>
    <ul
      className="map-detail-result__item-value map-detail-result__item-list"
    >
      <li
        className="map-detail-result__item-list-item"
        key="01"
      >
        01: SBI Description 1
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="02"
      >
        02: SBI Description 2
      </li>
    </ul>
  </section>
</div>
`;
